--- a/production/inscription.html
+++ b/production/inscription.html
@@ -123,9 +123,9 @@
                                     <i class="fa fa-reply"></i> Back
                                 </button>
                                 <div class="social-links text-center">
-                                    <a href="http://www.isen.fr/toulon/accueil/" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
-                                    <a href="http://www.isen.fr/toulon/accueil/" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
-                                    <a href="http://www.isen.fr/toulon/accueil/" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
+                                    <a href="http://creative-tim.com" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
+                                    <a href="http://creative-tim.com" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
+                                    <a href="http://creative-tim.com" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
                                 </div>
                             </div>
                         </div> <!-- end back panel -->
@@ -176,9 +176,9 @@
                                     <i class="fa fa-reply"></i> Back
                                 </button>
                                 <div class="social-links text-center">
-                                    <a href="http://www.isen.fr/toulon/accueil/" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
-                                    <a href="http://www.isen.fr/toulon/accueil/" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
-                                    <a href="http://www.isen.fr/toulon/accueil/" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
+                                    <a href="http://creative-tim.com" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
+                                    <a href="http://creative-tim.com" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
+                                    <a href="http://creative-tim.com" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
                                 </div>
                             </div>
                         </div> <!-- end back panel -->
@@ -230,9 +230,9 @@
                                     <i class="fa fa-reply"></i> Back
                                 </button>
                                 <div class="social-links text-center">
-                                    <a href="http://www.isen.fr/toulon/accueil/" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
-                                    <a href="http://www.isen.fr/toulon/accueil/" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
-                                    <a href="http://www.isen.fr/toulon/accueil/" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
+                                    <a href="http://creative-tim.com" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
+                                    <a href="http://creative-tim.com" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
+                                    <a href="http://creative-tim.com" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
                                 </div>
                             </div>
                         </div> <!-- end back panel -->
