--- a/production/index6.html
+++ b/production/index6.html
@@ -59,7 +59,7 @@
                             <a href="#">A Propos</a>
                         </li>
                         <li>
-                            <a href="#"> <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Connexion</a>
+                            <a href="#"> <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Connexion / Inscription</a>
                         </li>
                     </ul>
                 </div>
@@ -120,7 +120,7 @@
                             </div>
                             <div class="footer">
                                 <button class="btn btn-simple" rel="tooltip" title="" onclick="rotateCard(this)" data-original-title="Flip Card">
-                                    <i class="fa fa-reply"></i> Back
+                                    <i class="fa fa-reply"></i> Retour
                                 </button>
                                 <div class="social-links text-center">
                                     <a href="http://www.isen.fr/toulon/accueil/" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
@@ -173,7 +173,7 @@
                             </div>
                             <div class="footer">
                                 <button class="btn btn-simple" rel="tooltip" title="" onclick="rotateCard(this)" data-original-title="Flip Card">
-                                    <i class="fa fa-reply"></i> Back
+                                    <i class="fa fa-reply"></i> Retour
                                 </button>
                                 <div class="social-links text-center">
                                     <a href="http://www.isen.fr/toulon/accueil/" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
@@ -227,7 +227,7 @@
                             </div>
                             <div class="footer">
                                 <button class="btn btn-simple" rel="tooltip" title="" onclick="rotateCard(this)" data-original-title="Flip Card">
-                                    <i class="fa fa-reply"></i> Back
+                                    <i class="fa fa-reply"></i> Retour
                                 </button>
                                 <div class="social-links text-center">
                                     <a href="http://www.isen.fr/toulon/accueil/" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
