--- a/production/inscription.html
+++ b/production/inscription.html
@@ -72,199 +72,154 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Bienvenue sur MOOCs</h1>
+                    <h1>Inscription sur MOOCs</h1>
                     <p>Voici des MOOCs destinés aux étudiants ingénieurs afin de pouvoir former les étudiants </p>
                 </div>
             </div>
         </div><br><br>
-        <!-- /.container -->
-        <div class="container">
-            <div class="col-md-12 ">
-                <!---- FLIP CARD 1ER ---->
-                <div class="col-md-4 col-sm-6 animated zoomIn">
-                   <div class="card-container manual-flip">
-                    <div class="card">
-                        <div class="front">
-                            <div class="cover">
-                                <img src="images/rotating_card_thumb1.jpg">
-                            </div>
-                            <div class="user">
-                                <img class="img-circle" src="images/cvr.png">
-                            </div>
-                            <div class="content">
-                                <div class="main">
-                                    <h3 class="name">Réaliser un CV d'ingénieur</h3>
-                                    <p class="profession">Jean-Michel Rolland</p>
-                                    <h5><i class="fa fa-map-marker fa-fw text-muted"></i> France, Toulon</h5>
-                                    <br><a href="#fakelink" class="btn btn-block btn-md btn-info">Inscription</a> 
-                                </div>
-                                <div class="footer">
-                                    <button class="btn btn-simple" onclick="rotateCard(this)">
-                                        <i class="fa fa-mail-forward"></i> Information
-                                    </button>
-                                </div>
-                            </div>
-                        </div> <!-- end front panel -->
-                        <div class="back">
-                            <div class="header">
-                                <h5 class="motto">Réaliser un CV d'ingénieur</h5>
-                            </div> 
-                            <div class="content">
-                                <div class="main">
-                                    <h4 class="text-center">Description</h4>
-                                    <p>Réaliser un CV d'ingénieur</p>
-                                    <h4 class="text-center">Durée</h4>
-                                    <h4 class="text-center">Compétence</h4>
-                                    <p></p>
-                                </div>
-                            </div>
-                            <div class="footer">
-                                <button class="btn btn-simple" rel="tooltip" title="" onclick="rotateCard(this)" data-original-title="Flip Card">
-                                    <i class="fa fa-reply"></i> Back
-                                </button>
-                                <div class="social-links text-center">
-                                    <a href="http://creative-tim.com" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
-                                    <a href="http://creative-tim.com" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
-                                    <a href="http://creative-tim.com" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
-                                </div>
-                            </div>
-                        </div> <!-- end back panel -->
-                    </div> <!-- end card -->
-                </div> <!-- end card-container -->
-            </div> <!-- end col sm 3 -->
-            <!---- FLIP BOARD FIN ---->
- <!---- FLIP CARD 1ER ---->
-                <div class="col-md-4 col-sm-6 animated zoomIn">
-                   <div class="card-container manual-flip">
-                    <div class="card">
-                        <div class="front">
-                            <div class="cover">
-                                <img src="images/rotating_card_thumb1.jpg">
-                            </div>
-                            <div class="user">
-                                <img class="img-circle" src="images/cvr.png">
-                            </div>
-                            <div class="content">
-                                <div class="main">
-                                    <h3 class="name">Réaliser un CV d'ingénieur</h3>
-                                    <p class="profession">Jean-Michel Rolland</p>
-                                    <h5><i class="fa fa-map-marker fa-fw text-muted"></i> France, Toulon</h5>
-                                    <br><a href="#fakelink" class="btn btn-block btn-md btn-info">Inscription</a> 
-                                </div>
-                                <div class="footer">
-                                    <button class="btn btn-simple" onclick="rotateCard(this)">
-                                        <i class="fa fa-mail-forward"></i> Information
-                                    </button>
-                                </div>
-                            </div>
-                        </div> <!-- end front panel -->
-                        <div class="back">
-                            <div class="header">
-                                <h5 class="motto">Réaliser un CV d'ingénieur</h5>
-                            </div> 
-                            <div class="content">
-                                <div class="main">
-                                    <h4 class="text-center">Description</h4>
-                                    <p>Réaliser un CV d'ingénieur</p>
-                                    <h4 class="text-center">Durée</h4>
-                                    <h4 class="text-center">Compétence</h4>
-                                    <p></p>
-                                </div>
-                            </div>
-                            <div class="footer">
-                                <button class="btn btn-simple" rel="tooltip" title="" onclick="rotateCard(this)" data-original-title="Flip Card">
-                                    <i class="fa fa-reply"></i> Back
-                                </button>
-                                <div class="social-links text-center">
-                                    <a href="http://creative-tim.com" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
-                                    <a href="http://creative-tim.com" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
-                                    <a href="http://creative-tim.com" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
-                                </div>
-                            </div>
-                        </div> <!-- end back panel -->
-                    </div> <!-- end card -->
-                </div> <!-- end card-container -->
-            </div> <!-- end col sm 3 -->
-            <!---- FLIP BOARD FIN ---->
 
-            <!---- FLIP CARD 1ER ---->
-                <div class="col-md-4 col-sm-6 animated zoomIn">
-                   <div class="card-container manual-flip">
-                    <div class="card">
-                        <div class="front">
-                            <div class="cover">
-                                <img src="images/rotating_card_thumb1.jpg">
-                            </div>
-                            <div class="user">
-                                <img class="img-circle" src="images/cvr.png">
-                            </div>
-                            <div class="content">
-                                <div class="main">
-                                    <h3 class="name">Réaliser un CV d'ingénieur</h3>
-                                    <p class="profession">Jean-Michel Rolland</p>
-                                    <h5><i class="fa fa-map-marker fa-fw text-muted"></i> France, Toulon</h5>
-                                    <br><a href="#fakelink" class="btn btn-block btn-md btn-info">Inscription</a> 
-                                </div>
-                                <div class="footer">
-                                    <button class="btn btn-simple" onclick="rotateCard(this)">
-                                        <i class="fa fa-mail-forward"></i> Information
-                                    </button>
-                                </div>
-                            </div>
-                        </div> <!-- end front panel -->
-                        <div class="back">
-                            <div class="header">
-                                <h5 class="motto">Réaliser un CV d'ingénieur</h5>
-                            </div> 
-                            <div class="content">
-                                <div class="main">
-                                    <h4 class="text-center">Description</h4>
-                                    <p>Réaliser un CV d'ingénieur</p>
-                                    <h4 class="text-center">Durée</h4>
-                                    <h4 class="text-center">Compétence</h4>
-                                    <p></p>
-                                </div>
-                            </div>
-                            <div class="footer">
-                                <button class="btn btn-simple" rel="tooltip" title="" onclick="rotateCard(this)" data-original-title="Flip Card">
-                                    <i class="fa fa-reply"></i> Back
-                                </button>
-                                <div class="social-links text-center">
-                                    <a href="http://creative-tim.com" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
-                                    <a href="http://creative-tim.com" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
-                                    <a href="http://creative-tim.com" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
-                                </div>
-                            </div>
-                        </div> <!-- end back panel -->
-                    </div> <!-- end card -->
-                </div> <!-- end card-container -->
-            </div> <!-- end col sm 3 -->
-            <!---- FLIP BOARD FIN ---->
-
-
-
-        </div>
+            <div class="container">
+                <div class="row">
+                    <div class="jumbotron col-sm-8 col-sm-offset-2 animated slideInUp">
+                      <p>Formulaire d'inscription</p>
+                        <form action="inscription.php" id="myform">
+                          <fieldset class="form-group">
+                            <label for="exampleInputName">Nom</label>
+                            <input type="input" class="form-control" id="exampleInputName" name="surname" placeholder="Entrer nom">
+                            <small class="text-muted">Nom</small>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="exampleInputPrename">Prenom</label>
+                            <input type="input" class="form-control" id="exampleInputPrename" name="name" placeholder="Entrer prenom">
+                            <small class="text-muted">Prenom</small>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="exampleInputPseudo">Pseudo</label>
+                            <input type="input" class="form-control" id="exampleInputPseudo" name="pseudo" placeholder="Entrer Pseudo">
+                            <small class="text-muted">Pseudo</small>
+                        </fieldset>
+                          <fieldset class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" name="email" placeholder="Entrer email">
+                            <small class="text-muted">Email</small>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="exampleInputPassword1">Mot de passe</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1" name="password" placeholder="Password">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="exampleSelect1">Pays</label>
+                            <select class="form-control" id="exampleSelect1">
+                              <option>Europe</option>
+                              <option>Amérique</option>
+                              <option>Asie</option>
+                              <option>Afrique</option>
+                          </select>
+                      </fieldset>
+                <fieldset class="form-group">
+                    <label for="exampleInputFile">File input</label>
+                    <input type="file" class="form-control-file" id="exampleInputFile">
+                    <small class="text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
+                </fieldset>
+      <div class="checkbox">
+        <label>
+          <input type="checkbox"> Check me out
+      </label>
     </div>
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    </div>
+    </div>
+    </div>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
 
-    <script type="text/javascript">
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
 
-    function rotateCard(btn){
-        var $card = $(btn).closest('.card-container');
-        console.log($card);
-        if($card.hasClass('hover')){
-            $card.removeClass('hover');
-        } else {
-            $card.addClass('hover');
-        }
-    }
-    
-    
-    </script>
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+<!-- Validation -->
+<script src="js/jqueryvalidate/jquery.validate.min.js"></script>
+<script src="js/jqueryvalidate/additional-methods.min.js"></script>
+
+<script type="text/javascript">
+
+// --------------- REGEX --------------------
+$.validator.addMethod("usernameRegex", function(value, element) {
+  return this.optional(element) || /^[a-z\u00E0-\u00FC_.+-]+$/i.test(value);
+});
+
+$.validator.addMethod("mailRegex", function(value, element) {
+    return this.optional(element) || /^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$/i.test(value);
+});
+
+var form = $("#myform");
+form.validate({
+      //prendre le name
+      errorElement: 'span',
+      errorClass: 'help-block',
+      highlight: function(element, errorClass, validClass) {
+        $(element).closest('.form-group').addClass("has-error");
+      },
+      unhighlight: function(element, errorClass, validClass) {
+        $(element).closest('.form-group').removeClass("has-error");
+      },
+      rules: {
+        name: {
+          required: true,
+          usernameRegex: true,
+          minlength: 2,
+        },
+        surname: {
+          required: true,
+          usernameRegex: true,
+          minlength: 2,
+        },
+        pseudo: {
+          required: true,
+          usernameRegex: true,
+          minlength: 2,
+        },
+        password : {
+          required: true,
+          minlength: 4,
+        },
+        city:{
+          required: true,
+        },
+        name: {
+          required: true,
+          usernameRegex: true,
+          minlength: 3,
+        },
+        email: {
+          required: true,
+          mailRegex: true,
+          minlength: 3,
+        },
+      },
+      messages: {
+        username: {
+          required: "Username required",
+        },
+        name: {
+          required: "name required",
+        },
+        password : {
+          required: "Password required",
+        },
+        name: {
+          required: "Name required",
+        },
+        email: {
+          required: "Email required",
+        },
+      }
+      });
+
+
+</script>
 
 
 </body>
