--- a/production/indexGraph.html
+++ b/production/indexGraph.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gentallela Alela! | </title>
+    <title>MOOC chapitre </title>
 
     <!-- Bootstrap core CSS -->
 
@@ -75,9 +75,9 @@
                     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
 
                         <div class="menu_section">
-                            <h3>General</h3>
+                            <h3>Chapitre</h3>
                             <ul class="nav side-menu">
-                                <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                                <!--<li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="index.html">Dashboard</a>
                                         </li>
@@ -147,14 +147,53 @@
                                         </li>
                                     </ul>
                                 </li>
+                                !-->
+                                <li><a><i class="fa fa-home"></i> Chapitre 1<br> Identité<span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu" style="display: none">
+                                        <li><a href="">Nom Prénom</a>
+                                        </li>
+                                        <li><a href="">Adresse</a>
+                                        </li>
+                                        <li><a href="">Télephone</a>
+                                        </li>
+                                        <li><a href="">Mail</a>
+                                        </li>
+                                        <li><a href="">Date de naissance</a>
+                                        </li>
+                                        <li><a href="">Nationnalité</a>
+                                        </li>
+                                        <li><a href="">Social</a>
+                                        </li>
+                                        <li><a href="">Evaluation</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                 <li><a><i class="fa fa-home"></i> Chapitre 2 <br> Formation<span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu" style="display: none">
+                                        <li><a href="">Date</a>
+                                        </li>
+                                        <li><a href="">Intitulé</a>
+                                        </li>
+                                        <li><a href="">sigles</a>
+                                        </li>
+                                        <li><a href="">Lieu</a>
+                                        </li>
+                                        <li><a href="">Spé.</a>
+                                        </li>
+                                        <li><a href="">Autre info</a>
+                                        </li>
+                                        <li><a href="">Evaluation</a>
+                                        </li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                         <div class="menu_section">
-                            <h3>Live On</h3>
+                            <h3>Menu</h3>
                             <ul class="nav side-menu">
-                                <li><a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-question-circle"></i> Autre <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
-                                        <li><a href="e_commerce.html">E-commerce</a>
+                                       <!-- <li><a href="e_commerce.html">E-commerce</a>
                                         </li>
                                         <li><a href="projects.html">Projects</a>
                                         </li>
@@ -164,11 +203,12 @@
                                         </li>
                                         <li><a href="profile.html">Profile</a>
                                         </li>
+                                    -->
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-wrench"></i> Paramètre <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
-                                        <li><a href="page_404.html">404 Error</a>
+                                       <!-- <li><a href="page_404.html">404 Error</a>
                                         </li>
                                         <li><a href="page_500.html">500 Error</a>
                                         </li>
@@ -178,10 +218,10 @@
                                         </li>
                                         <li><a href="pricing_tables.html">Pricing Tables</a>
                                         </li>
-
+                                    -->
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a>
+                                <li><a><i class="fa fa-envelope"></i> Tchat <span class="label label-success pull-right">Coming Soon</span></a>
                                 </li>
                             </ul>
                         </div>
